# Haku

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  cscope.out  gitadd.bat
Editor/: CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt  defines.hpp  haku.hpp  misc.hpp  test.cpp  test.hpp  types.hpp
Engine/Core/: application.cpp  application.hpp  hmemory.cpp  hmemory.hpp  input.cpp  input.hpp  logger.cpp  logger.hpp  timer.cpp  timer.hpp
Engine/Platform/: platform.hpp  platform_win32.cpp
Engine/Platform/win32/: platform_win32.cpp
Engine/core/: application.cpp  application.hpp  event.cpp  event.hpp  file_system.cpp  file_system.hpp  hmemory.cpp  hmemory.hpp  hstddef.cpp  hstddef.hpp  input.cpp  input.hpp  logger.cpp  logger.hpp  renderer.cpp  renderer.hpp  timer.cpp  timer.hpp
Engine/generics/: c_queue.cpp  c_queue.hpp  darray.cpp  darray.hpp  hash_map.cpp  hash_map.hpp  hash_set.cpp  hash_set.hpp  queue.cpp  queue.hpp  single_ll.cpp  single_ll.hpp
Engine/memory/: hmemory.cpp  hmemory.hpp  linear_allocator.cpp  linear_allocator.hpp
Engine/platform/: platform.cpp  platform.hpp  platform_linux.cpp  platform_linux.hpp
Engine/renderer/: renderer.cpp  renderer.hpp  renderer_back_end.cpp  renderer_back_end.hpp  renderer_front_end.cpp  renderer_front_end.hpp  renderer_types.inl  shader_compiler.cpp  shader_compiler.hpp
Engine/renderer/backends/directx/: buffer.cpp  buffer.hpp  command_buffer_pool.cpp  command_buffer_pool.hpp  command_context.cpp  command_context.hpp  cpu_descriptors.cpp  cpu_descriptors.hpp  debuglayer.cpp  debuglayer.hpp  descriptor_heaps.cpp  descriptor_heaps.hpp  directx.hpp  directx_backend.cpp  directx_backend.hpp  directx_types.hpp  directx_types.inl  engine_shaders.cpp  engine_shaders.hpp  gpu_descriptors.cpp  gpu_descriptors.hpp  helpers.cpp  helpers.hpp  pipeline_state.cpp  pipeline_state.hpp  pso.cpp  pso.hpp  resources.cpp  resources.hpp  rootsig.cpp  rootsig.hpp  rootsignature.cpp  rootsignature.hpp  shader.cpp  shader.hpp  shader_compiler.cpp  shader_compiler.hpp  swapchain.cpp  swapchain.hpp
Engine/renderer/backends/directx/copyengine/: copyengine.cpp  copyengine.hpp
Engine/renderer/model/: importer.cpp  importer.hpp  mesh.cpp  mesh.hpp
Haku/: CMakeLists.txt  Defines.hpp  Haku.hpp  hakupch.hpp  macros.hpp
Haku/Core/: Application.cpp  Application.hpp  Events.cpp  Events.hpp  Exceptions.cpp  Exceptions.hpp  HakuLog.cpp  HakuLog.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Renderer.cpp  Renderer.hpp  UILayer.cpp  UILayer.hpp  UIapi.cpp  UIapi.hpp  VertexStruct.hpp  Window.cpp  Window.hpp
Haku/Platform/DirectX12/: D3D12Buffer.cpp  D3D12Buffer.hpp  D3D12CommandQueue.cpp  D3D12CommandQueue.hpp  D3D12PipelineState.cpp  D3D12PipelineState.hpp  D3D12RenderDevice.cpp  D3D12RenderDevice.hpp  D3D12Renderer.cpp  D3D12Renderer.hpp
Haku/Platform/Windows/: MainWindow.cpp  MainWindow.hpp
Haku/Renderer/: Buffer.hpp  D3D12Buffer.cpp  D3D12Buffer.hpp  D3D12CommandQueue.cpp  D3D12CommandQueue.hpp  D3D12DescriptorHeaps.cpp  D3D12DescriptorHeaps.hpp  D3D12PipelineState.cpp  D3D12PipelineState.hpp  D3D12RenderDevice.cpp  D3D12RenderDevice.hpp  D3D12Renderer.cpp  D3D12Renderer.hpp  D3D12Resources.cpp  D3D12Resources.hpp  D3D12RootSignature.cpp  D3D12RootSignature.hpp  D3D12SwapChain.cpp  D3D12SwapChain.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  PipelineState.hpp  RHI.hpp  RenderCommandQueue.hpp  RenderDevice.hpp  Renderer.cpp  Renderer.hpp  VertexStruct.hpp
Haku/Renderer/DirectX12/: D3D12CommandList.cpp  D3D12CommandList.hpp  D3D12CommandQueue.cpp  D3D12CommandQueue.hpp  D3D12DescriptorAllocation.cpp  D3D12DescriptorAllocation.hpp  D3D12DescriptorAllocator.cpp  D3D12DescriptorAllocator.hpp  D3D12DescriptorHeaps.cpp  D3D12DescriptorHeaps.hpp  D3D12DescriptorPage.cpp  D3D12DescriptorPage.hpp  D3D12Fence.cpp  D3D12Fence.hpp  D3D12PipelineState.cpp  D3D12PipelineState.hpp  D3D12RenderDevice.cpp  D3D12RenderDevice.hpp  D3D12Renderer.cpp  D3D12Renderer.hpp  D3D12ResourceStateTracker.cpp  D3D12ResourceStateTracker.hpp  D3D12ResourceViews.cpp  D3D12ResourceViews.hpp  D3D12Resources.cpp  D3D12Resources.hpp  D3D12RootSignature.cpp  D3D12RootSignature.hpp  D3D12SwapChain.cpp  D3D12SwapChain.hpp  D3D12UploadBuffer.cpp  D3D12UploadBuffer.hpp  D3D12UploadDescriptor.cpp  D3D12UploadDescriptor.hpp  GPUVisibleDescriptorHeap.cpp  GPUVisibleDescriptorHeap.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  VertexProperties.hpp
Haku/Renderer/Utils/: Dequeue.hpp  Queue_MT.hpp
Testbed/: CMakeLists.txt  main.cpp
assets/: BuiltIn_Pixel.hlsl  BuiltIn_Vertex.hlsl  CMakeLists.txt  cube.mtl
editor/: CMakeLists.txt  editor.cxx
engine/: .clang-format  CMakeLists.txt  defines.hpp  engine.cxx  engine.hpp  haku.cxx  logger.hpp  types.hpp
engine/assets/shaders/: default_vert_shader.vert
engine/file_systems/: file.cxx  file.hpp
engine/graphics/: .hpp  command.cxx  command.hpp  device.cxx  device.hpp  graphics.cxx  graphics.hpp  memory.cxx  memory.hpp  renderer.cxx  renderer.hpp  runtime.cxx  runtime.hpp  shader.cxx  shader.hpp  vertex.hpp  vulkan_context.cxx  vulkan_context.hpp  vulkan_results.hpp
engine/graphics/vulkan/: vulkan_command_allocator.cxx  vulkan_command_allocator.hpp  vulkan_context.cxx  vulkan_context.hpp  vulkan_device.cxx  vulkan_device.hpp  vulkan_fence.cxx  vulkan_fence.hpp  vulkan_helpers.hpp  vulkan_images.cxx  vulkan_images.hpp  vulkan_memory.cxx  vulkan_memory.hpp  vulkan_pipeline.cxx  vulkan_pipeline.hpp  vulkan_primitives.cxx  vulkan_primitives.hpp  vulkan_renderpass.cxx  vulkan_renderpass.hpp  vulkan_results.hpp  vulkan_semaphore.cxx  vulkan_semphore.hpp  vulkan_swapchain.cxx  vulkan_swapchain.hpp  vulkan_thread_primitives.hpp  vulkan_vertex_data.hpp
engine/include/: haku.hpp  type.hpp
engine/platform/: window.cxx  window.hpp
engine/renderer/: context.cxx  context.hpp  render_api.hpp  renderer.cxx  renderer.hpp  vertex_data.hpp
engine/renderer/vulkan/: vulkan_defines.hpp  vulkan_driver.cxx  vulkan_driver.hpp
engine/window/: window.cxx  window.hpp
lib/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
(+6 files in other folders)
